fix: overflow issue on Mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,7 @@ a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 }
 
 @layer utilities {
